--- a/page3/main.css
+++ b/page3/main.css
@@ -1057,7 +1057,7 @@ html {
     width: 75vw;
     font-family: Montserrat-ExtraBold;
     font-size: 2.5rem;
-    color: #ffffff\;
+    color: #ffffff;
     letter-spacing: 0;
     text-align: center;
   }
